--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     <audio id="gunCockOne">
             <source src="assets/images/gunCocking1.mp3" type="audio/mp3">
           </audio>
-          <audio id="gunCockTwo">
-                <source src="assets/images/gunCocking2.mp3" type="audio/mp3">
+          <audio id="gunShotOne">
+                <source src="assets/images/gunShot1.mp3" type="audio/mp3">
               </audio>
+        
     <div class="jumbotron jumbotron-fluid">
       
           <h1 class="display-4">Wild West Duel Challenge!</h1>
